// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Workflow Sandbox > write > should generate correct code for camel case input names 1`] = `
"from vellum.workflows.sandbox import WorkflowSandboxRunner

from .inputs import Inputs
from .workflow import TestWorkflow

if __name__ != "__main__":
    raise Exception("This file is not meant to be imported")


dataset = [
    Inputs(someFoo="some-value"),
    Inputs(someBar="some-value"),
]

runner = WorkflowSandboxRunner(workflow=TestWorkflow(), dataset=dataset)

runner.run()
"
`;

exports[`Workflow Sandbox > write > should generate correct code for snake case input names 1`] = `
"from vellum.workflows.sandbox import WorkflowSandboxRunner

from .inputs import Inputs
from .workflow import TestWorkflow

if __name__ != "__main__":
    raise Exception("This file is not meant to be imported")


dataset = [
    Inputs(some_foo="some-value"),
    Inputs(some_bar="some-value"),
]

runner = WorkflowSandboxRunner(workflow=TestWorkflow(), dataset=dataset)

runner.run()
"
`;

exports[`Workflow Sandbox > write > should generate correct code given inputs 1`] = `
"from vellum.workflows.sandbox import WorkflowSandboxRunner

from .inputs import Inputs
from .workflow import TestWorkflow

if __name__ != "__main__":
    raise Exception("This file is not meant to be imported")


dataset = [
    Inputs(some_foo="some-value"),
    Inputs(some_bar="some-value"),
]

runner = WorkflowSandboxRunner(workflow=TestWorkflow(), dataset=dataset)

runner.run()
"
`;

exports[`Workflow Sandbox > write > should generate correct code given optional input with default of null string value 1`] = `
"from vellum.workflows.sandbox import WorkflowSandboxRunner

from .inputs import Inputs
from .workflow import TestWorkflow

if __name__ != "__main__":
    raise Exception("This file is not meant to be imported")


dataset = [
    Inputs(),
]

runner = WorkflowSandboxRunner(workflow=TestWorkflow(), dataset=dataset)

runner.run()
"
`;

exports[`Workflow Sandbox > write > should properly handle special characters with escaped quotes 1`] = `
"from vellum.workflows.sandbox import WorkflowSandboxRunner

from .inputs import Inputs
from .workflow import TestWorkflow

if __name__ != "__main__":
    raise Exception("This file is not meant to be imported")


dataset = [
    Inputs(special_characters_input='"special characters"'),
]

runner = WorkflowSandboxRunner(workflow=TestWorkflow(), dataset=dataset)

runner.run()
"
`;
